Fix preview box alignment and background coloring

--- a/src/pages/PromptPage/PromptPage.scss
+++ b/src/pages/PromptPage/PromptPage.scss
@@ -98,6 +98,7 @@
     width: 100%;
     height: 100px;
     overflow-y: scroll;
+    background-color: white;
   }
 
   &__sub-container {
